fix: fixing broken css in component project

--- a/styles/global.css
+++ b/styles/global.css
@@ -218,6 +218,7 @@ aside {
 #profile-my-projects-main .project {
   flex: 1;
   min-width: calc(50% - (30px / 2));
+  max-width: calc(50% - (30px / 2));
   display: flex;
   flex-direction: column;
   background-color: var(--bg-cards);
